# codex-pools

./: .gitignore  Cargo.toml  LICENSE  Package.swift  README.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml  release.yml
CodexManager/: CodexManagerApp.swift
CodexManager/Models/: CodexAnalytics.swift  CodexInstance.swift  CodexInstanceCoding.swift  CodexSessionThread.swift  CodexTemplate.swift  InstanceNaming.swift  InstanceStore.swift
CodexManager/Services/: BundleCloneService.swift  CodexAnalyticsCLIService.swift  CodexModelPricing.swift  CodexSessionService.swift  ExportService.swift  ImportService.swift  LaunchService.swift
CodexManager/Views/: AnalyticsView.swift  ContentView.swift  EnvVarEditorView.swift  IconPickerView.swift  InstanceDetailView.swift  InstanceListView.swift  LaunchArgsEditorView.swift  SessionBrowserView.swift  TemplatePickerView.swift
CodexPoolsCLI/: main.swift
CodexPoolsCore/Models/: CodexInstance.swift  CodexInstanceCoding.swift  CodexTemplate.swift  InstanceNaming.swift
CodexPoolsCore/Services/: BundleCloneService.swift  InstanceConfiguration.swift  InstanceResolver.swift  LaunchService.swift
Tests/CodexPoolsTests/: BundleCloneServiceTests.swift  CodexInstanceCodingTests.swift  CodexInstanceTests.swift  CodexSessionServiceTests.swift  InstanceNamingTests.swift  InstanceResolverTests.swift
crates/codex-pools-cli/: Cargo.toml
crates/codex-pools-cli/src/: analytics.rs  cache.rs  codex.rs  main.rs  pricing.rs
script/: build_and_run.sh
