[package]
name = "codex-pools-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "codex-pools"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
